# Mandelbrot

./: CMakeLists.txt  README.md  run.sh
src/: Functions.hpp  Shader.hpp  Window.hpp  main.cpp
src/shaders/: FractalShader.frag  FractalShader.vert
